fix: refactor relative local of files login